--- a/css/flat-ui.css
+++ b/css/flat-ui.css
@@ -64,6 +64,10 @@
   text-align: center;
 }
 
+.extLinkArea {
+  text-align: center;
+}
+
 /* Standard Screen size for labels */
 @media only screen and (min-width : 1200px){
   .list-row {
